--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -1,3 +1,14 @@
+p {
+
+font-size: 15px;
+}
+
+.heading{
+     color: #C0C0C0;
+     font-size: 25px;
+}
+
+
 /* Custom styles for the side navigation panel */
 .sidenav {
     height: 100%;
@@ -6,7 +17,6 @@
     top: 0;
     left: 0;
     background-color: #2C3E50;
-    padding-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +26,7 @@
 .sidenav a {
     padding: 8px 16px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     color: #C0C0C0;
     display: flex;
     flex-direction: column;
@@ -30,7 +40,8 @@
 /* Main content */
 .main {
     padding: 0 10px;
-    margin-left: 310px; /* 300px for sidenav width + 10px gap */
+    margin-left: 310px;
+    margin-right: 20px;
 }
 
 /* Media query for small screens */
@@ -65,6 +76,7 @@
     .main {
         margin-left: 0;
         padding-top: 60px;
+        padding-left: 10px;
     }
     .img-profile {
         display: none; /* Hide the profile image on small screens */
@@ -80,10 +92,10 @@
 }
 
 .img-profile {
-    padding-top: 60px;
-    max-width: 150px;
+    padding-top: 40px;
+    max-width: 126px;
     width: 100%;
     height: auto;
-    border-radius: 50%;
+    max-height: 200px;
     object-fit: cover;
 }
